// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingListItem component it should render 1`] = `
<Swipeable
  bounceOnMount={false}
  onRef={[Function]}
  onRightActionRelease={[Function]}
  rightButtons={
    Array [
      <SwipeRowAction
        analyticsData={
            Object {
                "trackName": "build:app:projects:details:shoppinglist:edititemtap",
              }
        }
        backgroundColor="#D45D00"
        iconName="create"
        onPress={[Function]}
        rightSwipeItem={true}
        text="Edit"
    />,
    ]
  }
>
  <View
    style={
      Object {
        "0": Object {
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "marginTop": -1,
        },
        "1": Object {},
        "2": Object {
          "backgroundColor": "#EBEDEF",
        },
        "3": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 8,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
      >
        <Image
          height={42}
          source={
            Object {
              "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad,w_42,h_42/product/test/test",
            }
          }
          style={
            Object {
              "marginLeft": 8,
              "marginRight": 16,
            }
          }
          width={42}
        />
      </TouchableOpacity>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          weight="bold"
        >
          test
        </Text>
        <Text
          color="primary"
          decoration="underline"
        >
          Order #
          123456
        </Text>
        <Text
          size="small"
        >
          (Qty. 
          1
          ) 
          Arriving Monday
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            color="primary"
          >
            $1.00
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 8,
                "marginRight": 16,
              }
            }
          >
            <Icon
              color="#00A499"
              name="ios-checkmark-circle"
              size={18}
              style={
                Object {
                  "marginRight": 8,
                }
              }
            />
            <Text
              lineHeight={false}
            >
              Purchased
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 3,
          "marginLeft": 70,
        }
      }
    >
      <PricedOptions
        options={undefined}
      />
    </View>
  </View>
</Swipeable>
`;

exports[`ShoppingListItem component it should render a child item 1`] = `
<Swipeable
  bounceOnMount={false}
  onRef={[Function]}
  onRightActionRelease={[Function]}
  rightButtons={
    Array [
      <SwipeRowAction
        analyticsData={
            Object {
                "trackData": Object {
                  "compositeId": undefined,
                  "finish": "steel",
                  "manufacturer": "test",
                  "productId": undefined,
                  "screen": "Shopping List Tab",
                  "uniqueId": undefined,
                },
                "trackName": "build:app:projects:details:shoppinglist:additemtocarttap",
              }
        }
        backgroundColor="#00A499"
        iconName="cart"
        onPress={[Function]}
        rightSwipeItem={true}
        text="Add To Cart"
    />,
      <SwipeRowAction
        analyticsData={
            Object {
                "trackName": "build:app:projects:details:shoppinglist:edititemtap",
              }
        }
        backgroundColor="#D45D00"
        iconName="create"
        onPress={[Function]}
        rightSwipeItem={true}
        text="Edit"
    />,
      <SwipeRowAction
        analyticsData={
            Object {
                "trackName": "build:app:projects:details:shoppinglist:deleteitemtap",
              }
        }
        backgroundColor="#A94442"
        iconName="trash"
        onPress={[Function]}
        rightSwipeItem={true}
        text="Delete"
    />,
    ]
  }
>
  <View
    style={
      Object {
        "0": Object {
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "marginTop": -1,
        },
        "1": Object {
          "borderLeftColor": "#B1B2B4",
          "borderLeftWidth": 2,
          "marginLeft": 16,
        },
        "2": Object {
          "backgroundColor": "#EBEDEF",
        },
        "3": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 8,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
      >
        <Image
          height={42}
          source={
            Object {
              "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad,w_42,h_42/product/test/test",
            }
          }
          style={
            Object {
              "marginLeft": 8,
              "marginRight": 16,
            }
          }
          width={42}
        />
      </TouchableOpacity>
      <View>
        <Text
          weight="bold"
        >
          test
        </Text>
        <Text>
          Finish: 
          steel
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            size="small"
          >
            $1.00
             
          </Text>
          <Text
            size="small"
          >
            (Qty. 
            1
            )
             
          </Text>
          <Text
            color="greyDark"
            size="small"
          >
            1
             In-stock
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            color="primary"
          >
            $1.00
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 3,
          "marginLeft": 70,
        }
      }
    >
      <PricedOptions
        options={undefined}
      />
    </View>
  </View>
</Swipeable>
`;

exports[`ShoppingListItem component it should render collapsed 1`] = `
<Swipeable
  bounceOnMount={false}
  onRef={[Function]}
  onRightActionRelease={[Function]}
  rightButtons={
    Array [
      <SwipeRowAction
        analyticsData={
            Object {
                "trackData": Object {
                  "compositeId": undefined,
                  "finish": "steel",
                  "manufacturer": "test",
                  "productId": undefined,
                  "screen": "Shopping List Tab",
                  "uniqueId": undefined,
                },
                "trackName": "build:app:projects:details:shoppinglist:additemtocarttap",
              }
        }
        backgroundColor="#00A499"
        iconName="cart"
        onPress={[Function]}
        rightSwipeItem={true}
        text="Add To Cart"
    />,
      <SwipeRowAction
        analyticsData={
            Object {
                "trackName": "build:app:projects:details:shoppinglist:edititemtap",
              }
        }
        backgroundColor="#D45D00"
        iconName="create"
        onPress={[Function]}
        rightSwipeItem={true}
        text="Edit"
    />,
      <SwipeRowAction
        analyticsData={
            Object {
                "trackName": "build:app:projects:details:shoppinglist:deleteitemtap",
              }
        }
        backgroundColor="#A94442"
        iconName="trash"
        onPress={[Function]}
        rightSwipeItem={true}
        text="Delete"
    />,
    ]
  }
>
  <View
    style={
      Object {
        "0": Object {
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "marginTop": -1,
        },
        "1": Object {},
        "2": Object {
          "backgroundColor": "#FFFFFF",
        },
        "3": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 8,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
      >
        <Image
          height={42}
          source={
            Object {
              "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad,w_42,h_42/product/test/test",
            }
          }
          style={
            Object {
              "marginLeft": 8,
              "marginRight": 16,
            }
          }
          width={42}
        />
      </TouchableOpacity>
      <View>
        <Text
          weight="bold"
        >
          test
        </Text>
        <Text>
          Finish: 
          steel
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            size="small"
          >
            $1.00
             
          </Text>
          <Text
            size="small"
          >
            (Qty. 
            1
            )
             
          </Text>
          <Text
            color="greyDark"
            size="small"
          >
            1
             In-stock
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            color="primary"
          >
            $1.00
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "marginBottom": 3,
          "marginLeft": 70,
        }
      }
    >
      <PricedOptions
        options={undefined}
      />
    </View>
  </View>
</Swipeable>
`;
